[package]
authors = ['Mixbytes <https://github.com/mixbytes/dsky-substrate-template>']
edition = '2018'
homepage = 'https://substrate.dev'
name = 'dsky-utils'
version = '2.0.0'

[dependencies]
substrate-fixed = { default-features = false, git = 'https://github.com/encointer/substrate-fixed', tag = 'v0.5.6' }
