[package]
authors = ['Mixbytes <https://github.com/mixbytes/dsky-substrate-template>']
description = 'FRAME pallet for handling city maps, runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'pallet-ds-maps'
repository = 'https://github.com/mixbytes/dsky-substrate-template'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
serde = { default-features = false, version = '1.0.116', optional = true }
sp-std = { default-features = false, version = '2.0.0' }
pallet-ds-accounts = { default-features = false, version = '2.0.0', path = '../ds-accounts' }
dsky-utils = { default-features = false, version = '2.0.0', path = '../../dsky-utils' }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
substrate-fixed = { default-features = false, git = 'https://github.com/encointer/substrate-fixed', tag = 'v0.5.6' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-balances/std',
    'serde/std'
]

